--- a/front_index/css/style.css
+++ b/front_index/css/style.css
@@ -242,6 +242,7 @@ footer{
         }
         .card_item{
             height: 170px;
+            
         }
         }
 
@@ -289,4 +290,75 @@ footer{
         width: 92%;
     }
 
+}
+
+
+
+
+
+
+
+
+/* ¡¡Estilo del footer!!!*/
+.footer_container{
+    width: 100%;
+    height: 150px; /* 100 píxeles de alto */
+    background-color: #1142ca; /* Color de fondo del footer */
+    color: #fff; /* Color del texto */
+    position: relative; /* Fija el footer en la parte inferior de la ventana del navegador */
+    bottom: 0; /* Coloca el footer en la parte inferior */
+    left: 0; /* Alinea el footer a la izquierda */
+    padding: 20px; /* Espacio interno alrededor del contenido del footer */
+    box-sizing: border-box; /* Incluye el padding en el ancho y alto total del footer */
+  
+}
+.links_footer{
+        position: absolute;
+        bottom: 50px;
+        right: 20px;
+
+    }
+
+.links_footer a {
+    color: #fff; /* Color del enlace */
+    text-decoration: none; /* Quita el subrayado del enlace */
+    margin-left: 10px; /* Espacio entre los enlaces */
+    border: solid 2px white;
+    border-radius: 50%;
+    box-shadow: 1px 1px 20px black;
+}
+.a_icon{
+    height: 40px;
+}
+.text_footer{
+    height: 20px;
+    width: 150px;
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 25px;
+}
+
+.text_footer p{
+    margin: 3px;
+}
+
+@media (max-width:340px){
+    .links_footer{
+        display: flex;
+        flex-direction: column;
+        bottom: 25px;
+    }
+    .links_footer a{
+        border: none;
+        border-radius: none;
+        box-shadow: none;
+    }
+}
+
+@media (max-width:240px){
+    .text_footer{
+        width: 120px;
+    }
 }
